# cobol-file-reader

./: .gitignore  .gitlab-ci.yml  .releaserc  ACHPCT99.cbl  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _copybook.py  converter.py  copy.cpy  copybook.py  ebcdic.py  file.py  main.py  package-lock.json  package.json  parser.py  pyproject.toml  zowe.config.json  zowe.schema.json
.foo/front-end/: App.tsx  main.tsx
.foo/vite-project/: package-lock.json  package.json
.gitlab/semantic-release/: .releaserc  README.md  package-lock.json  package.json
assets/copybook/: ACHKC600.cpy  DEBK1122.cpy  DEBK307.cpy  DEBK601.cpy
assets/files/: BRT.DEB.DEB1122.D240118.D310.SS000110  BRT.DEB.DEB601.BAIXA.SS000101
backend/: converter.py  copybook.py  file.py  main.py  pyproject.toml  rest.http
backend/mdu/: copybook.py  extract_ebcdic_to_ascii.py
backend/mdu/docs/: 99-README-v1.md
backend/mdu/sample-data/: CLIENT.EBCDIC.txt
backend/mdu/src/: mdu.py
backend/mdu/src/core/: copybook.py
backend/sample-data/copybooks/: DEBK1122.cpy
backend/sample-data/files/: UT-S-ACH601S
front-end/: bun.lockb  package-lock.json  package.json  tsconfig.app.json
front-end/src/: App.tsx  main.tsx  makeData.ts
mdu/: datasource.py  ebcdic.py  parse_copybook_to_json.py
mdu/LegacyReference/: COBKS05.cpy
mdu/sample-data/: CLIENT.json  COBKS05-ddb.json
sample-data/copybooks/: ACHKC600.cpy
src/: extension.ts
src/converter/: extractor.ts  index.ts
src/lib/: zowe.ts
src/models/: configuration.model.ts  message.model.ts
src/panels/: TemplatePickerPanel.ts
src/utilities/: getConfiguration.ts  gitlab.ts
webview-ui/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
webview-ui/public/: index.html  manifest.json
(+73 files in other folders)
