[tool.poetry]
name = "cobol-file-reader"
version = "0.1.0"
description = ""
authors = ["Matheus Santiago <matheus.nilo.santiago@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
tree-sitter = "^0.22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
