[tool.poetry]
name = "cobol-file-reader"
version = "0.1.0"
description = ""
authors = ["Matheus Santiago <matheus.nilo.santiago@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
tree-sitter = "^0.22.3"
fastapi = "^0.111.1"
duckdb = "^1.0.0"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
